<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="60dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:text="Admin Login"
        android:textAlignment="center"
        android:textSize="60sp" />

    <TextView
        android:id="@+id/tv_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"

        android:text="Enter your Details "
        android:textSize="17sp"
        android:translationX="115dp"
        android:layout_marginLeft="25dp" />


    <EditText
        android:id="@+id/et_admin_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="Email"
        android:inputType="textEmailAddress"

        android:padding="15dp"

        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_admin_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:hint="Password"
        android:inputType="textPassword"

        android:padding="15dp"

        android:textSize="15sp" />


    <Button
        android:id="@+id/admin_button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_admin_password"

        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"

        android:textColor="@android:color/white"
        android:text="Login"/>


</LinearLayout>